# ros2_ws

./: LICENSE
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: my_first_node.cpp  robot_news_station.cpp  smartphone.cpp  template_cpp_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py  robot_news_station.py  smartphone.py  template_python_node.py
